Cập nhật danh sách nhân viên

--- a/src/app/dashboard-module/Component/danhsachnhanvien/danhsachnhanvien.component.html
+++ b/src/app/dashboard-module/Component/danhsachnhanvien/danhsachnhanvien.component.html
@@ -7,7 +7,7 @@
       <div class="row">
           <h2 class="col-sm-6" style="font-weight: 500;">Danh sách nhân viên</h2>
           <div class="mb-3 col-sm-6" style="text-align: right;">
-            <!-- <input type="text" class="form-control" placeholder="Tìm kiếm" aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="PageInfo.Keyword" (ngModelChange)="onSearch($event)"> -->
+            <input type="text" class="form-control" placeholder="Tìm kiếm" aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="this.filterText" (keyup)="onSearch()">
             <button class="btn btn-outline-secondary" type="button" id="button-addon3" (click)="openCreate()">Thêm mới</button>
         </div>
       </div>
@@ -23,8 +23,8 @@
           <thead>
             <tr>
               <th style="text-align: center;">STT</th>
-              <th>Họ và Tên</th>
-              <th>Email</th>
+              <th>Tài khoản</th>
+              <th>Họ và tên</th>
               <th>Số điện thoại</th>
               <!-- <th>Địa chỉ</th> -->
             </tr>
