--- a/src/app/dashboard-module/Component/danhsachnhanvien/danhsachnhanvien.component.html
+++ b/src/app/dashboard-module/Component/danhsachnhanvien/danhsachnhanvien.component.html
@@ -6,9 +6,14 @@
     <div class="row">
       <div class="row">
           <h2 class="col-sm-6" style="font-weight: 500;">Danh sách nhân viên</h2>
-          <div class="mb-3 col-sm-6" style="text-align: right;">
+          <div class="mb-3 col-sm-5" style="text-align: right;">
             <input type="text" class="form-control" placeholder="Tìm kiếm" aria-label="Recipient's username" aria-describedby="button-addon2" [(ngModel)]="this.filterText" (keyup)="onSearch()">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon3" (click)="openCreate()">Thêm mới</button>
+        </div>
+        <div class=" col-sm-1" style="text-align: right;">
+          <mat-icon style="vertical-align: middle; text-align: right;
+          color: blue;
+          margin-top: -1px;" title="Thêm nhân viên mới"  (click)="openCreate()">
+            add_circle_outline</mat-icon>
         </div>
       </div>
   
@@ -22,9 +27,9 @@
         <table class="table table-striped table-hover">
           <thead>
             <tr>
-              <th style="text-align: center;">STT</th>
-              <th>Tài khoản</th>
-              <th>Họ và tên</th>
+              <th style="text-align: left;width:20px;">STT</th>
+              <th style="width:35px;">Tài khoản</th>
+              <th style="width:200px;">Họ và tên</th>
               <th>Số điện thoại</th>
               <!-- <th>Địa chỉ</th> -->
             </tr>
